Multiply managers and listeners paths