@@ -4,10 +4,11 @@ import org.bukkit.ChatColor;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public final class Color {
     public static List<String> getTranslated(List<String> strings) {
-        return strings.stream().map(Color::getTranslated).toList();
+        return strings.stream().map(Color::getTranslated).collect(Collectors.toList());
     }
 
     public static String getTranslated(String string) {
